syntax = "proto3";

package pb;
option go_package  = "pb/echo";

import "google/api/annotations.proto";

service Echo {
    rpc UnaryEcho (EchoRequest) returns (EchoResponse){
        option (google.api.http) = {
            post: "/v1/example/echo"
            body: "*"
        };
    }
    rpc ServerStreamingEcho (EchoRequest) returns (stream EchoResponse);
    rpc ClientStreamingEcho (stream EchoRequest) returns (EchoResponse);
    rpc BidirectionalStreamingEcho (stream EchoRequest) returns (stream EchoResponse);
}

// EchoRequest is the request for echo.
message EchoRequest {
    string message = 1;
}

// EchoResponse is the response for echo.
message EchoResponse {
    string message = 1;
}